<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="405dp"
            android:layout_height="140dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/button_onoff_indicator_on" />

        <TextView
            android:id="@+id/title"
            android:layout_width="368dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <ListView
            android:id="@+id/ingredientList"
            android:layout_width="327dp"
            android:layout_height="149dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientListTitle" />

        <TextView
            android:id="@+id/instructionBox"
            android:layout_width="368dp"
            android:layout_height="62dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="instructions box"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTitle" />

        <TextView
            android:id="@+id/commentSectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="35dp"
            android:text="Comment Section:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <ListView
            android:id="@+id/listOfComments"
            android:layout_width="412dp"
            android:layout_height="196dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageEtxt" />

        <EditText
            android:id="@+id/messageEtxt"
            android:layout_width="228dp"
            android:layout_height="128dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="add a comment!"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentSectionTitle" />

        <Button
            android:id="@+id/postBtn"
            android:layout_width="94dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="86dp"
            android:text="Post"
            app:layout_constraintStart_toEndOf="@+id/messageEtxt"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <TextView
            android:id="@+id/ingredientListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="Ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/instructionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="Instructions:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientList" />

        <Button
            android:id="@+id/backBtn"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="173dp"
            android:layout_height="51dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="88dp"
            android:text="back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionBox" />

        <Button
            android:id="@+id/madeBtn"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="172dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="I made this Recipe!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionBox" />

        <Button
            android:id="@+id/goingToMakeBtn"
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="201dp"
            android:layout_height="63dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="204dp"
            android:text="oooo I'm planning on making this"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>