...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="321dp"
        android:layout_height="66dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Edit Title"
...
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="60dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginBottom="60dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/instructions"
        android:layout_width="364dp"
        android:layout_height="125dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:gravity="start|top"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/photoURL"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="add image url here"
        android:inputType="text"
...
