...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pantryTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pantryRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pantrySV" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantryScrollV" />

    <Button
        android:id="@+id/shoppingBtn"
        android:layout_width="147dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:text="Your Shopping List"
        app:layout_constraintEnd_toStartOf="@+id/addIngToPantryBtn"
...
